Removed some older code, replaced test with new interface and implemented new code in other aggs
Signed-off-by: expani <anijainc@amazon.com>